# llama.rs

./: CLAUDE.md  Cargo.toml  Justfile  README.md  justfile
.github/workflows/: ci.yml
docs/: CONFIG_REFERENCE.md  DEPENDENCIES.md
plans/: ARCHITECTURE.md  CONFIG_REFERENCE.md  DEPENDENCIES.md  STEP01.md  STEP02.md  STEP03.md  STEP04.md  STEP05.md  STEP06.md  STEP07.md  STEP08.md  STEP09.md  STEP10.md  STEP11.md  STEP12.md  TRACKER.md
src/: error.rs  lib.rs  main.rs
src/api/: mod.rs  ollama.rs  openai.rs  types.rs
src/api/stream/: ndjson.rs  sse.rs
src/cli/: ls.rs  mod.rs  pull.rs  rm.rs  run.rs  serve.rs
src/config/: mod.rs  resolve.rs
src/download/: hf.rs  mod.rs  progress.rs
src/model/: mod.rs  types.rs
src/process/: cli.rs  health.rs  mod.rs  server.rs
tests/: api.rs  cli.rs  live_download.rs  live_ollama_cli.rs  live_server.rs  live_signal.rs
tests/fixtures/: librechat_chat.json  openwebui_chat.json
