[package]
name = "llama-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Ollama-like CLI wrapper for llama.cpp"
license = "MIT"

[lib]
name = "llama_rs"
path = "src/lib.rs"

[[bin]]
name = "llama"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros"] }
bytesize = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
indicatif = "0.18"
mimalloc = "0.1"
nix = { version = "0.31", features = ["signal", "process"] }
requestty = "0.6"
reqwest = { version = "0.13", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
which = "8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
